<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/rvImgPhoto"
        android:layout_marginEnd="16dp"
        android:src="@android:color/background_light"
        app:civ_border_width="4dp"
        app:civ_border_color="#006BA1"
        tools:ignore="MissingConstraints"
        android:layout_marginRight="16dp" />
    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/rvUsername"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/rvName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rvImgPhoto"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/rvName"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:textColor="@color/black"
        android:text="@string/Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rvImgPhoto"
        app:layout_constraintTop_toBottomOf="@+id/rvUsername" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/rvCompany"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:textColor="@color/black"
        android:text="@string/company"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rvImgPhoto"
        app:layout_constraintTop_toBottomOf="@+id/rvLocation"/>
    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/rvLocation"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:textColor="@color/black"
        android:text="@string/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rvImgPhoto"
        app:layout_constraintTop_toBottomOf="@+id/rvName"/>



</androidx.constraintlayout.widget.ConstraintLayout>